# aweb

./: .env.awid-production  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  sot-delta.md  video.md
.beadhub-cache/: sync-state.json
.beads/: .gitignore  PRIME.md  issues.jsonl
.beads/backup/: backup_state.json  config.jsonl
.emacs-bu/: .env.awid-production~
.github/workflows/: aw-release.yml  awid-pypi-release.yml  awid-release.yml  channel-release.yml  docker-ai-dispatcher.yml  docker-claude-agent.yml  docker-discord-bridge.yml  docker.yml  server-ci.yml
agent-image/: message-watcher.sh
awid/: .env.example  Dockerfile  Dockerfile.release  README.md  docker-compose.yml  pyproject.toml
awid/scripts/: prod_db_reset.py
awid/site/: hugo.toml
awid/site/content/: _index.md
awid/site/layouts/: index.html
awid/site/static/: identity-guide.md  trust-model.md
awid/src/awid/: __init__.py  contract.py  dns_auth.py  dns_verify.py  http_didkey.py  log.py  log_config.py  ratelimit.py  registry.py  signing.py  team_ids.py
awid/src/awid_service/: __init__.py  cli.py  config.py  db.py  deps.py  main.py  migrate.py
awid/src/awid_service/migrations/: 001_registry.sql  001_teams.sql  002_drop_did_mapping_address_fields.sql  002_registry.sql  002_teams.sql  003_drop_public_address_current_key.sql  003_team_visibility.sql
awid/src/awid_service/routes/: did.py  dns_addresses.py  dns_namespace_reverify.py  dns_namespaces.py  teams.py
awid/tests/: conftest.py  test_certificate_lifecycle.py  test_certificates.py  test_conformance_vectors.py  test_did.py  test_dns_verify.py  test_http_didkey.py  test_main.py  test_migrate.py  test_namespaces.py  test_registry_cache.py  test_routes.py  test_schema.py  test_site_files.py  test_team_lifecycle.py  test_team_routes.py  test_teams.py
awid/tests/fixtures/legacy_aweb_migrations/: 001_initial.sql
channel/: .mcp.json  README.md  package-lock.json  package.json  tsconfig.json
channel/.claude-plugin/: plugin.json
channel/src/: config.ts  index.ts  tools.ts
channel/test/: client.test.ts  config.test.ts  conformance.test.ts  dispatch.test.ts  events.test.ts  identity.test.ts  index.test.ts  integration.test.ts  registry.test.ts  tools.test.ts  trust.test.ts  vectors.json
cli/go/: AGENTS.md  Makefile  README.md  claims.go  client.go  coordination.go  go.mod  go.sum  install.sh  project_roles.go  reservations.go  sot.md  tasks.go  tasks_test.go  team_instructions.go  team_roles.go  workspaces.go
client/: README.md  agents.go  alias_prefix.go  auth.go  chat.go  client.go  client_test.go  go.mod  go.sum  init.go  mail.go  reservations.go  sse.go  util.go
client/awconfig/: context.go  context_test.go  global_config.go  global_config_test.go  selection.go  selection_test.go
client/chat/: chat.go  chat_test.go  types.go
discord-bridge/src/: beadhub-client.ts  discord-listener.ts  discord-sender.ts  index.ts  orchestrator-relay.ts  redis-listener.ts
docs/: README.md  adb-emulator.md  agent-guide.md  agent-guide.txt  aw-run.md  aweb-sot.md  aweb.md  awid-package-migration.md  awid-service.md  awid-sot.md  awid-team-architecture-sot.md  channel.md  claweb-mcp-integration.md  cli-command-reference.md  configuration.md  contributing.md  coordination-migration.md  coordination.md  getting-started.md  id-sot.md  identity-guide.md  identity-implementation.md  identity-key-verification.md  identity-messaging-contract.md  identity.md  mcp-tools-reference.md  messaging.md  protocol-overview.md  self-hosting-guide.md  server-api-reference.md  sot.md  support-contract-v1.md  support-tools.md  team-architecture-sot.md  trust-model.md  workspaces.md
docs/vectors/: README.md  dns-txt-v1.json  identity-log-v1.json
scripts/: check_docs_regressions.py  e2e-oss-user-journey.sh  regenerate-cli-reference.sh  run_aweb_conformance_local.sh
scripts/lib/: capture-channel-events.mjs
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/docs/: self-hosting.md
server/tests/: conftest.py  test_active_work_summary.py  test_address_scope_registry.py  test_agents_suggest_alias_http.py  test_api_health.py  test_aweb_package_import.py  test_aweb_spawn.py  test_awid_registry_client.py  test_awid_registry_routes.py  test_bootstrap_no_key_minting.py  test_bootstrap_registry_sync.py  test_chat_http.py  test_chat_pending.py  test_chat_service.py  test_claim_focus_lifecycle.py  test_cli.py  test_connect.py  test_connect_http.py  test_contacts.py  test_contacts_http.py  test_conversations_http.py  test_custody_sign_endpoint.py  test_custody_signing.py  test_dashboard.py  test_dns_verify.py  test_events_http.py  test_gc.py  test_identity_conformance_vectors.py  test_init_wire_shape.py  test_lifecycle.py  test_mcp_identity.py  test_mcp_mail_chat.py  test_mcp_project_instruction_tools.py  test_mcp_team_context.py  test_mcp_workspace_tools.py  test_messages.py  test_messages_http.py  test_mutation_hooks.py  test_package_data.py  test_presence_team_scope.py  (+12 more)
src/aweb/: __init__.py  (+24 more)
tests/: conftest.py  db_utils.py  test_agent_lifecycle.py  test_aweb_agent_log.py  test_aweb_agent_profile.py  test_aweb_agents.py  test_aweb_alias_suggestion.py  test_aweb_bootstrap.py  test_aweb_chat.py  test_aweb_chat_waiting.py  test_aweb_check_access.py  test_aweb_claims.py  test_aweb_contacts.py  test_aweb_conversations.py  test_aweb_cross_project_isolation.py  test_aweb_custodial_signing.py  test_aweb_custody.py  test_aweb_db_migrations.py  test_aweb_deregister.py  test_aweb_did.py  test_aweb_events_stream.py  test_aweb_heartbeat.py  test_aweb_hooks.py  test_aweb_identity_claim.py  test_aweb_identity_reset.py  test_aweb_import_surface.py  test_aweb_init.py  test_aweb_init_identity.py  test_aweb_introspect_deleted_project.py  test_aweb_introspect_scoping.py  test_aweb_is_contact.py  test_aweb_mail.py  test_aweb_mcp_proxy_auth.py  test_aweb_me_routes.py  test_aweb_message_identity.py  test_aweb_namespace_slug.py  test_aweb_namespaces.py  test_aweb_peer_deregister.py  test_aweb_policies.py  test_aweb_presence.py  (+26 more)
(+460 files in other folders)
