[project]
name = "aweb"
version = "0.1.0"
description = "Agent Web: open protocol + OSS reference implementation for agent coordination (identity/auth, mail, chat, reservations, presence)."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.12"
keywords = ["ai", "agents", "coordination", "chat", "mail", "locks", "reservations"]
dependencies = [
  "fastapi",
  "httpx",
  "uvicorn",
  "typer",
  "redis",
  "bcrypt>=5.0.0",
  "email-validator>=2.3.0",
  "pgdbm>=0.4.0",
]

[project.scripts]
aweb = "aweb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "asgi-lifespan>=2.1.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "mypy>=1.17.0",
  "psycopg2-binary>=2.9.11",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.14.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aweb"]

[tool.hatch.build.targets.wheel.force-include]
"src/aweb/migrations" = "aweb/migrations"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["aweb"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
follow_imports = "skip"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
pretty = true
explicit_package_bases = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["aweb"]

[tool.pytest.ini_options]
markers = [
  "aweb_conformance: black-box conformance tests (skipped unless AWEB_CONFORMANCE=1)",
]
