[project]
name = "aweb"
version = "0.1.1"
description = "Agent Web: coordination server for AI agents (identity/auth, presence, mail, chat, reservations)."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.12"
keywords = ["ai", "agents", "coordination", "chat", "mail", "locks", "reservations"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.100.0",
  "httpx>=0.24.0",
  "uvicorn>=0.20.0",
  "typer>=0.9.0",
  "redis>=4.2.0",
  "bcrypt>=5.0.0",
  "email-validator>=2.3.0",
  "pgdbm>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/awebai/aweb"
Repository = "https://github.com/awebai/aweb"
Issues = "https://github.com/awebai/aweb/issues"

[project.scripts]
aweb = "aweb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "asgi-lifespan>=2.1.0",
  "black>=25.1.0",
  "build>=1.4.0",
  "isort>=6.0.1",
  "mypy>=1.17.0",
  "psycopg2-binary>=2.9.11",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.14.9",
  "twine>=6.2.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".beads/",
  ".beadhub-cache/",
  ".beadhub",
  ".claude/",
  "AGENTS.md",
  "CLAUDE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aweb"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["aweb"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
follow_imports = "skip"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
pretty = true
explicit_package_bases = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["aweb"]

[tool.pytest.ini_options]
markers = [
  "aweb_conformance: black-box conformance tests (skipped unless AWEB_CONFORMANCE=1)",
]
